# THE-Seed-OpenRA

./: .gitignore  .gitmodules  HANDOVER_20260121.md  NEXT_DEV_HANDOVER.md  PRODUCT_NLU_ROADMAP.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_BLUEPRINT.md  REFACTOR_PLAN.md  REFACTOR_ROADMAP.md  dashboard_publish.py  debug_zone_topology.md  install&run.sh  main.py  main_legacy.py  main_mas.py  queue_manager.py  requirements.txt  run.bat  run.py  run.sh  runtime_views.py  session_browser.py  socket-apis.md  task_replay.py  task_triage.py  test_api.py  test_backend.sh  test_full_system.py  test_legacy.py  test_signal_stack.sh  test_simple.py  unit_registry.py
adapter/: openra_env.py
adjutant/: __init__.py  adjutant.py  notifications.py  runtime_nlu.py
agents/: base_agent.py  commander.py  enemy_agent.py  global_blackboard.py  nlu_gateway.py
benchmark/: __init__.py
dashboard/: Cargo.toml  DASHBOARD_PLAN.md  PROGRESS.md  REFACTOR_NOTES.md
dashboard/src/: app.rs  app_complex.rs  main.rs  ws_client.rs
dashboard/src/components/: history_timeline.rs  left_panel.rs  log_viewer.rs  memory_view.rs  metrics_card.rs  mod.rs  right_panel.rs  tab_view.rs
docs/: INTELLIGENCE_SERVICE_GUIDE.md  ZONE_MANAGER_GUIDE.md  architecture-report.md  live_e2e_checklist.md  llm_benchmark_report.md  rts_agent_system_roadmap.md  testing_governance.md
experts/: DISADVANTAGE_ASSESSOR_README.md  __init__.py  base.py  combat.py  deploy.py  economy.py  game_api_protocol.py  info_base_state.py  info_disadvantage.py  info_threat.py  knowledge.py  movement.py  occupy.py  planners.py  rally.py  (+3 more)
(+509 files in other folders)
