[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"
crossbeam-channel = "0.5"
anyhow = "1.0"
